# byte-lite

./: .tgitconfig  .travis.yml  BUCK  CHANGES.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  02-no-exceptions.cpp  BUCK  CMakeLists.txt
include/nonstd/: byte.hpp
project/CodeBlocks/: byte-lite.cbp  byte-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: BUCK  CMakeLists.txt  byte-lite.t.cpp  byte-lite.t.h  byte-main.t.cpp  byte-main.t.h  byte-main.t.hpp  byte.t.cpp  t.bat  tc-cl.bat  tc.bat  tg.bat
